# g4e

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GNUmakefile  History  JLEICgeant4.cc  JLEICgeant4.in  README.md  README.rst  g4e.cc  g4e_output.root  jleic.mac  jleicvis.mac  mkdocs.yml  plotOccup.C  spack.yaml  spack_info.py  spconfig.py  vis.mac
src/: ActionInitialization.cc  ActionInitialization.hh  ArgumentProcessor.cc  ArgumentProcessor.hh  CMakeLists.txt  DetectorConstructionContext.hh  DetectorDesign.hh  EicParameters.hh  EicPhysicsList.cc  EicPhysicsList.hh  ExN04PrimaryGeneratorAction.cc  ExN04PrimaryGeneratorMessenger.cc  G4QuadrupoleMagField.cc  G4QuadrupoleMagField.hh  G4SteppingManager.cc  GeometryExport.cc  GeometryExport.hh  HepMCG4AsciiReader.cc  HepMCG4Interface.cc  HitTypes.h  InitializationAction.cc  InitializationAction.hh  InitializationContext.hh  InitializationContextInterface.hh  InitializationMConfig.hh  InputProcessor.hh  JLeicCalorHit.cc  JLeicCalorimeterSD.cc  JLeicDetectorConstruction.cc  JLeicDetectorConstruction.cc~  JLeicDetectorMessenger.cc  JLeicEventAction.cc  JLeicEventAction.hh  JLeicEventActionMessenger.cc  JLeicEventActionMessenger.hh  JLeicGemTrdSD.cc  JLeicHistoMConfig.cc  JLeicHistoMConfig.hh  JLeicMaterials.cc  JLeicMaterials.hh  (+55 more)
src/design_main/: CMakeLists.txt
src/design_main/jleic/: CMakeLists.txt  HistogramManager.hh  JLeicCalorHit.cc  JLeicCalorHit.hh  JLeicCalorimeterSD.cc  JLeicCalorimeterSD.hh  JLeicDetectorConstruction.cc  JLeicDetectorConstruction.hh  JLeicDetectorMessenger.cc  JLeicDetectorMessenger.hh  JLeicEventAction.cc  JLeicEventAction.hh  JLeicEventActionMessenger.hh  JLeicHistogramming.cc  JLeicInitializationContext.hh  JLeicRunAction.cc  JLeicRunAction.hh  JLeicSolenoid3D.hh  JLeicSteppingAction.cc  JLeicSteppingAction.hh  JLeicVertexSD.cc  JLeicXTRTransparentRegRadModel.cc  JLeicXTRphysics.cc  JleicHistogramming.hh
src/generator/: CMakeLists.txt  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.cc  PrimaryGeneratorMessenger.hh
src/generator/beagle_reader/: BeagleEventData.hh  BeagleGenerator.cc  BeagleGenerator.hh  BeagleGeneratorMessenger.cc  BeagleGeneratorMessenger.hh  BeagleInterface.cc  BeagleInterfaceMessenger.cc  BeagleInterfaceMessenger.hh  BeagleParticle.hh  BeagleReader.cc  BeagleReader.hh
src/generator/cone_particle_gun/: ConeGenerator.cc  ConeGenerator.hh  ConeParticleGun.cc  ConeParticleGun.hh  ConeParticleGunEta.cc  ConeParticleGunEta.hh  ConeParticleGunHW.cc  ConeParticleGunHW.hh  ConeParticleGunMessenger.cc  ConeParticleGunMessenger.hh  ConeParticleGunMessengerEta.cc  ConeParticleGunMessengerEta.hh  ConeParticleGunMessengerHW.cc  ConeParticleGunMessengerHW.hh
src/generator/generic_lund_reader/: README.md  TextEventFileReader.hh
src/generator/hepmc2_reader/: HepMCG4AsciiReader.cc  HepMCG4AsciiReader.hh  HepMCG4AsciiReaderMessenger.cc  HepMCG4AsciiReaderMessenger.hh  HepMCG4Interface.cc  HepMCG4Interface.hh  HepMcAsciiGenerator.cc  HepMcAsciiGenerator.hh  HepMcAsciiReaderMessenger.cc  HepMcAsciiReaderMessenger.hh  HepMcGeneratorInterface.cc  HepMcGeneratorInterface.hh
src/generator/pythia_ascii_reader/: PythiaAsciiReader.cc  PythiaAsciiReader.hh  PythiaAsciiReaderMessenger.cc  PythiaAsciiReaderMessenger.hh  PythiaInterface.cc
src/helpers/: StringHelpers.cc  StringHelpers.hh
src/io/beagle/: BeagleEventData.hh  BeagleInterface.cc  BeagleInterface.hh  BeagleInterfaceMessenger.cc  BeagleInterfaceMessenger.hh  BeagleParticle.hh  BeagleReader.cc  BeagleReader.hh  JEventSource_beagle.cc
src/io/generic_lund/: TextEventFileReader.hh
src/io/hepmc2/: HepMCG4AsciiReader.hh  HepMCG4AsciiReaderMessenger.cc  HepMCG4Interface.cc
src/io/pythia/: PythiaAsciiReader.cc  PythiaAsciiReader.hh  PythiaAsciiReaderMessenger.cc  PythiaAsciiReaderMessenger.hh  PythiaInterface.cc
src/io/root_output/: JLeicRootOutput.hh
src/main_detectors/: BeamPipeConstruction.cc  BeamPipeConstruction.hh  BeamlineConstruction.cc  BeamlineConstruction.hh  BeamlineConstructionMessenger.cc  BeamlineConstructionMessenger.hh  BeamlineMessenger.cc  BeamlineMessenger.hh  CMakeLists.txt  CommonCalorimeterHit.cc  CommonCalorimeterHit.hh  CommonCalorimeterSD.cc  CommonCalorimeterSD.hh  CommonTrackInformation.cc  CommonTrackInformation.hh  CommonVertexSD.cc  CommonVertexSD.hh  DetectorConfig.hh  ReferenceDetectorConstruction.cc  ReferenceDetectorConstruction.hh  ReferenceDetectorEventAction.cc  ReferenceDetectorEventAction.hh  ReferenceDetectorMessenger.cc  ReferenceDetectorMessenger.hh  ReferenceDetectorRunAction.cc  ReferenceDetectorRunAction.hh  ReferenceDetectorStepCut.cc  ReferenceDetectorStepCut.hh  ReferenceDetectorSteppingAction.cc  ReferenceDetectorSteppingAction.hh  ReferenceDetectorSteppingVerbose.cc  ReferenceDetectorSteppingVerbose.hh  ReferenceDetectorTrackingAction.cc  ReferenceDetectorTrackingAction.hh  SingleSubdetectorConstruction.cc  SingleSubdetectorConstruction.hh
src/main_detectors/handbook/: JLeicCalorimeterHit.cc  JLeicCalorimeterSD.cc  JLeicCe_emcalHit.cc  JLeicCe_emcalHit.hh  JLeicDetectorConfig.hh  JLeicDetectorConstruction.cc  JLeicDetectorConstruction.hh  JLeicDetectorMessenger.hh  JLeicEventAction.cc  JLeicEventAction.hh  JLeicGemTrdSD.cc  JLeicHistogramManager.hh  JLeicRunAction.cc  JLeicRunAction.hh  JLeicSolenoid3D.cc  JLeicStepCut.cc  JLeicStepCut.hh  JLeicSteppingAction.cc  JLeicSteppingVerbose.cc  JLeicSteppingVerbose.hh  JLeicTrackInformation.cc  JLeicTrackInformation.hh  JLeicVertexSD.cc  JLeicXTRphysics.cc  JLeicXTRphysics.hh  JLeicXTRphysicsMessenger.cc  JLeicXTRphysicsMessenger.hh  TRTDetectorConstruction.hh
src/main_detectors/jleic/: CMakeLists.txt  (+55 more)
src/root_output/: FlatGeneratedParticle.hh  FlatHit.cpp  FlatHit.hh  FlatIoCe_EMCAL.hh  FlatIoHit.hh  FlatIoParticle.hh  FlatIoTrack.hh  FlatIoTrack.hh.new  FlatIoVertex.hh  FlatValue.h  JLeicRootOutput.hh  MainRootOutput.cc  MainRootOutput.hh  RootFlatIO.hh  RootOutputManager.cc  RootOutputManager.cc.new  RootOutputManager.hh
src/subdetectors/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  main.cpp
(+557 files in other folders)
